--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
 	"back": false,
 	"global": false,
 	"trade": false,
-	"token": "NzYyNzg3NDM0NjA5OTAxNjE4.X3uPKA.-U1cTKnt1Cyihz7ZSoXHaaxIC58",
-	"channel": "762883314356715560",
+	"token": "",
+	"channel": "",
 	"guild": 2,
 	"Glob": 27
 }
