--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
   "back": false,
   "global": false,
   "trade": false,
-  "token": "NzYyNzg3NDM0NjA5OTAxNjE4.X3uPKA.-U1cTKnt1Cyihz7ZSoXHaaxIC58",
-  "channel": "811245588041433139",
+  "token": "",
+  "channel": "",
   "guild": 2,
   "Glob": 27
 }
